--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@
 
 <script>
     const gameContainer = document.querySelector('.game-container');
-    const apiUrl = 'https://game-15th.onrender.com'; // Замініть це на URL вашого API
+    const apiUrl = 'https://game-15th.vercel.app/'; // Замініть це на URL вашого API
 
     // Отримати стан гри з сервера
     function fetchGameState() {
